Updating contact page template

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -30,7 +30,7 @@
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
-              <h1 style="color: #fff; margin-bottom: 0px;">About Us</h1>
+              <h1 style="color: #FFFFFF; margin-bottom: 0;">About Us</h1>
             </div>
           {% end_module_attribute %}
           {% end_dnd_module %}
