Updating blog templates

--- a/src/css/_blog.css
+++ b/src/css/_blog.css
@@ -87,12 +87,69 @@
     padding: 16px 0px;
 }
 
+.blog-tag-filter__title,
+.blog-tag-filter__dropdown {
+    display: inline-block;
+}
+
+@media (max-width: 767px) {
+    .blog-tag-filter {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+}
+
+.blog-tag-filter__title {
+    color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+    font-weight: 600;
+    margin-right: 48px;
+    text-transform: uppercase;
+}
+
+.blog-tag-filter__dropdown {
+    position: relative;
+}
+
+.blog-tag-filter__dropdown select {
+    -webkit-appearance: none;
+        -moz-appearance: none;
+         appearance: none;
+    background-color: rgba(0, 0, 0, 0.3);
+    border: none;
+    color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+    display: inline-block;
+    padding: 0.75rem;
+    max-width: 100%;
+    width: 200px;
+}
+
+.blog-tag-filter__dropdown select::-ms-expand {
+    display: none;
+  }
+
+.blog-tag-filter__dropdown select:focus {
+    outline: none;
+}
+
+.blog-tag-filter__dropdown:after {
+    color: #FFFFFF;
+    content: "\25BE";
+    pointer-events: none;
+    position: absolute;
+    right: 0.75rem;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+}
+
+
 .blog-navigation__search form {
     background-color: transparent;
     border: none;
     margin-left: auto;
     max-width: 360px;
-    padding: 0px;
+    padding: 0;
 }
 
 @media (max-width: 767px) {
