--- a/src/templates/blog-index.html
+++ b/src/templates/blog-index.html
@@ -29,9 +29,9 @@
     </div>
 
     <div class="content-wrapper">
-      <div class="blog-index">
+      <section class="blog-index">
         {% for content in contents %}
-            <div class="blog-card">
+            <article class="blog-card">
               <div class="blog-card__header">
                 <h2 class="blog-card__title"><a href="{{ content.absolute_url }}">{{ content.name }}</a></h2>
                 {% if content.blog_author.avatar %}
@@ -66,9 +66,9 @@
                     {{ comments_number }} {{ comments_label }}
                 </div>
               </div>
-            </div>
+            </article>
         {% endfor %}
-      </div>
+      </section>
       {% if contents.total_page_count > 1 %}
         <div class="blog-pagination">
           {% set page_list = [-2, -1, 0, 1, 2] %}
@@ -78,17 +78,17 @@
           {% elif current_page_num == 1 %}{% set offset = 2 %}
           {% else %}{% set offset = 0 %}{% endif %}
 
-          <a class="blog-pagination__link blog-pagination__prev-link {{ "blog-pagination__prev-link--disabled" if !last_page_num }}" href="{{ blog_page_link(last_page_num) }}">
+          <a class="blog-pagination__link blog-pagination__prev-link {{ 'blog-pagination__prev-link--disabled' if !last_page_num }}" href="{{ blog_page_link(last_page_num) }}">
             {% icon name="chevron-left" style="SOLID", width="13", no_wrapper=True %}
             Prev
           </a>
           {% for page in page_list %}
             {% set this_page = current_page_num + page + offset %}
             {% if this_page > 0 and this_page <= contents.total_page_count %}
-              <a class="blog-pagination__link blog-pagination__number-link {{ "blog-pagination__link--active" if this_page == current_page_num }}" href="{{ blog_page_link(this_page) }}">{{ this_page }}</a>
+              <a class="blog-pagination__link blog-pagination__number-link {{ 'blog-pagination__link--active' if this_page == current_page_num }}" href="{{ blog_page_link(this_page) }}">{{ this_page }}</a>
             {% endif %}
           {% endfor %}
-          <a class="blog-pagination__link blog-pagination__next-link {{ "blog-pagination__next-link--disabled" if !next_page_num }}" href="{{ blog_page_link(current_page_num + 1) }}">
+          <a class="blog-pagination__link blog-pagination__next-link {{ 'blog-pagination__next-link--disabled' if !next_page_num }}" href="{{ blog_page_link(current_page_num + 1) }}">
             Next
             {% icon name="chevron-right" style="SOLID", width="13", no_wrapper=True %}
           </a>
