--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -16,7 +16,7 @@
     %}
 
     <div class="content-wrapper">
-      <div class="blog-post">
+      <article class="blog-post">
         <div class="blog-post__header">
             <h2 class="blog-post__title">{{ content.name }}</h2>
             {% if content.blog_author.avatar %}
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </article>
     </div>
 
     {% module "blog_cta"
@@ -76,7 +76,7 @@
         "src": get_asset_url("../images/phone.png"),
         "alt": "Mobile phone"
       },
-      cta_banner_content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>",
+      cta_banner_content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will help grow your business.</p>",
       cta_button="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
     %}
 
