--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -19,7 +19,7 @@
       background_image={
         "backgroundPosition": "MIDDLE_CENTER",
         "backgroundSize": "cover",
-        'imageUrl': get_asset_url("../images/about-banner.jpg")
+        "imageUrl": get_asset_url("../images/about-banner.jpg")
       },
       vertical_alignment="MIDDLE"
     %}
