--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -19,7 +19,7 @@
       background_image={
         "backgroundPosition": "MIDDLE_CENTER",
         "backgroundSize": "cover",
-        'imageUrl': get_asset_url("../images/home-banner.png")
+        "imageUrl": get_asset_url("../images/home-banner.png")
       },
       vertical_alignment="MIDDLE"
     %}
