Updating contact page template

--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -19,7 +19,7 @@
       background_image={
         "backgroundPosition": "MIDDLE_CENTER",
         "backgroundSize": "cover",
-        'imageUrl': get_asset_url("../images/pricing-banner.jpg")
+        "imageUrl": get_asset_url("../images/pricing-banner.jpg")
       },
       vertical_alignment="MIDDLE"
     %}
@@ -30,7 +30,7 @@
           %}
           {% module_attribute "html" %}
             <div style="text-align: center">
-              <h1 style="color: #fff; margin-bottom: 0px;">Pricing</h1>
+              <h1 style="color: #FFFFFF; margin-bottom: 0;">Pricing</h1>
             </div>
           {% end_module_attribute %}
           {% end_dnd_module %}
@@ -80,15 +80,14 @@
             {% dnd_module path="@hubspot/rich_text" %}
               {% module_attribute "html" %}
                 <div>
-                  <h2 style="color: #fff;">Full Control</h2>
-                  <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-                  <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-                  <ul style="color: #fff;">
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
-                    <li>Something awesome here</li>
+                  <h2 style="color: #FFFFFF;">Try It For Free</h2>
+                  <p style="color: #FFFFFF;">Get all of the power of our tools free for a month when you sign up today.</p>
+                  <p style="color: #FFFFFF;">Our free trial is a great way to see if our tool is a good fit for you. It includes:</p>
+                  <ul style="color: #FFFFFF;">
+                    <li>Up to ten connected users</li>
+                    <li>All of our built in tools</li>
+                    <li>24/7 support</li>
+                    <li>All of our free resources</li>
                   </ul>
                 </div>
               {% end_module_attribute %}
@@ -114,7 +113,7 @@
                   {% module_attribute "html" %}
                   <div style="text-align: center;">
                       <h2>Frequently Asked Questions</h2>
-                      <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                      <p>Answers to all of your frequently asked pricing questions.</p>
                   </div>
                   {% end_module_attribute %}
               {% end_dnd_module %}
