--- a/src/templates/landing-page.html
+++ b/src/templates/landing-page.html
@@ -35,7 +35,14 @@
           }
         %}
           {% dnd_module path="@hubspot/logo",
-            flexbox_positioning="MIDDLE_CENTER"
+            flexbox_positioning="MIDDLE_CENTER",
+            img={
+              "override_inherited_src": true,
+              "src": get_asset_url("../images/logo.png"),
+              "width": "205",
+              "alt": "Perfect Logo",
+              "size_type": "auto"
+            }
           %}
           {% end_dnd_module %}
         {% end_dnd_row %}
